# CubicDoggo_06R

./: LICENSE  README.md  monitor_plot.xml  monitor_plot_imuController.xml  robot_startup.service  start_robot.sh
python_test_scripts/: bno_test.py
src/cubic_doggo_moveit_config/: .setup_assistant
src/cubic_doggo_moveit_config/config/: cubic_doggo.srdf
src/my_robot_bringup/config/: cubic_doggo_controllers.yaml
src/my_robot_bringup/launch/: cubic_doggo.with_lifecycle.launch.py
src/my_robot_commander/: CMakeLists.txt  package.xml
src/my_robot_commander/include/my_robot_commander/: pid_controller.hpp
src/my_robot_commander/src/: cubic_doggo_lifecycle.cpp  cubic_doggo_lifecycle_imuController.cpp  cubic_doggo_lifecycle_imuController_walking.cpp  cubic_doggo_lifecycle_imuNode.cpp  pid_controller.cpp
src/my_robot_controller/src/: cubic_doggo_joy_control.cpp
src/my_robot_description/mesh/CADv2/: XL430holderThighBack.FCStd  XL430holderThighFront.FCStd  XL430rotorPadding.stl  _CubicDoggoPLA+_springFeet.curaprofile  _CubicDoggoPLA_default.curaprofile  basePlate.FCStd  baseSticker.FCStd  baseTorso.FCStd  calfFeet.FCStd  calfFeet.stl  calfFeetSpring.FCStd  hdmiHolder.FCStd  thighInner.stl
src/my_robot_description/urdf/: cubic_doggo.ros2_control.xacro  cubic_doggo.urdf.xacro  cubic_doggo_legB.xacro  cubic_doggo_legF.xacro
src/my_robot_firmware/: CMakeLists.txt  cubic_doggo_hardware_interface.xml
src/my_robot_firmware/include/my_robot_firmware/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.hpp  hardware_interface_imu_bno055.hpp
src/my_robot_firmware/src/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.cpp  hardware_interface_imu_bno055.cpp
src/my_robot_peripheral/: CMakeLists.txt  package.xml
src/my_robot_peripheral/src/: imu_bno055_node.cpp  rasp_pi_peripheral_node.cpp
src/my_toolbox_dynamixel_workbench/src/: a_Model_Scan.cpp  b_Ping.cpp  c_ID_Change.cpp  d_BPS_Change.cpp  e_Mode_Change.cpp  f_Reboot.cpp  g_Reset.cpp  h_Position.cpp  i_Velocity.cpp  j_Current_Based_Position.cpp  k_Read_Write.cpp  l_Sync_Write.cpp  m_Sync_Read_Write.cpp  n_Bulk_Read_Write.cpp  o_Find_Dynamixel.cpp  p_Monitor.cpp
